resolve layout problem at main page

--- a/src/www/components/search-main/search-main.component.less
+++ b/src/www/components/search-main/search-main.component.less
@@ -1,5 +1,5 @@
 .app-logo {
-  margin-bottom: 50px;
+  margin: 100px 0 50px 0;
 
   .app-title {
     font-size: 80px;
